Added models, controller, repo and service

--- a/backend/apt-building-proj/src/main/resources/application.properties
+++ b/backend/apt-building-proj/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=apt-building-proj
+spring.datasource.url=jdbc:postgresql://localhost:5432/apartment_db
+spring.datasource.username=postgres
+spring.datasource.password=mayank
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
